--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,215 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="build/tailwind.css" />
-    <title>DigitizeApp</title>
+    <title>DigitizeApp - Shop</title>
   </head>
-  <body class="">
-    <h1 class="text-xl font-bold">دوره تیلویند</h1>
+  <body class="bg-gray-100">
+    <div class="px-4">
+      <!-- app bar -->
+      <div class="md:hidden flex items-start justify-between mt-10 mb-6">
+        <div class="">Digitize</div>
+        <div class="text-lg font-bold text-slate-800">ساعت هوشمند</div>
+        <div
+          class="w-7 h-7 bg-white shadow-lg flex items-center justify-center rounded"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-5 stroke-slate-800"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+            />
+          </svg>
+        </div>
+      </div>
+      <!-- filter - sort mobile section -->
+      <div class="md:hidden flex items-center justify-between gap-x-4 mb-9">
+        <div
+          class="bg-white rounded p-3 flex items-center justify-start w-full"
+        >
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 stroke-orange-600"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 4h13M3 8h9m-9 4h9m5-4v12m0 0l-4-4m4 4l4-4"
+              />
+            </svg>
+          </div>
+          <span class="text-sm font-medium text-slate-800 mr-2"
+            >محبوب ترین
+          </span>
+        </div>
+        <div
+          class="bg-white rounded p-3 flex items-center justify-start w-full"
+        >
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 stroke-gray-300"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
+              />
+            </svg>
+          </div>
+          <span class="text-sm font-medium text-slate-800 mr-2"
+            >فیلتر : اپل</span
+          >
+        </div>
+      </div>
+      <!-- product section -->
+      <div
+        x-data="{ 
+          products : [
+            {id : 1 , title : 'اپل واچ سری ۹' , price : '۱۸,۸۹۹,۰۰۰ تومان' , imageUrl : '../assets/images/apple-watch-9.png'},
+            {id : 2 , title : 'اپل واچ اولترا ۲' , price : '۴۱,۶۰۰,۰۰۰ تومان' , imageUrl : '../assets/images/apple-watch-ultra2.png'},
+            {id : 3 , title : 'ساعت هوشمند اپل سری ۷' , price : '۱۴,۹۹۹,۰۰۰  تومان' , imageUrl : '../assets/images/apple-watch-7.png'},
+            {id : 4 , title : 'اپل واچ سری ۹' , price : '۱۸,۸۹۹,۰۰۰ تومان' , imageUrl : '../assets/images/apple-watch-9.png'},
+            {id : 5 , title : 'اپل واچ اولترا ۲' , price : '۴۱,۶۰۰,۰۰۰ تومان' , imageUrl : '../assets/images/apple-watch-ultra2.png'},
+            {id : 6 , title : 'ساعت هوشمند اپل سری ۷' , price : '۱۴,۹۹۹,۰۰۰  تومان' , imageUrl : '../assets/images/apple-watch-7.png'},
+            {id : 7 , title : 'اپل واچ سری ۹' , price : '۱۸,۸۹۹,۰۰۰ تومان' , imageUrl : '../assets/images/apple-watch-9.png'},
+            {id : 8 , title : 'اپل واچ اولترا ۲' , price : '۴۱,۶۰۰,۰۰۰ تومان' , imageUrl : '../assets/images/apple-watch-ultra2.png'},
+            {id : 9 , title : 'ساعت هوشمند اپل سری ۷' , price : '۱۴,۹۹۹,۰۰۰  تومان' , imageUrl : '../assets/images/apple-watch-7.png'},
+            {id : 10, title : 'اپل واچ اولترا ۲' , price : '۴۱,۶۰۰,۰۰۰ تومان' , imageUrl : '../assets/images/apple-watch-ultra2.png'},
+          ] 
+        }"
+        class="grid gap-x-2 gap-y-6 grid-cols-2 md:grid-cols-3 lg:grid-cols-4 sm:gap-x-4 md:gap-x-8 md:gap-y-10"
+      >
+        <!-- single product -->
+        <template x-for="product in products" :key="product.id">
+          <div class="bg-white rounded-xl p-2 shadow-md">
+            <div class="mb-3 bg-slate-200 rounded-xl p-2">
+              <img :src="product.imageUrl" alt="apple-watch" />
+            </div>
+            <!-- product desc.. -->
+            <div class="flex items-center justify-between mb-3">
+              <span class="text-slate-200 text-sm md:text-base">اپل</span>
+              <div x-data="{color : 'red' }" class="flex items-center">
+                <div
+                  @click="color = 'red' "
+                  :class="color=== 'red' ? 'ring-1 ring-red-400  sm:ring-2' : '' "
+                  class="w-4 h-4 sm:w-6 sm:h-6 flex items-center justify-center rounded-full cursor-pointer bg-red-400 border border-white sm:border-2"
+                >
+                  <svg
+                    x-show="color === 'red' "
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-2 sm:size-3 stroke-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="m4.5 12.75 6 6 9-13.5"
+                    />
+                  </svg>
+                </div>
+                <div
+                  @click="color = 'blue' "
+                  :class="color=== 'blue' ? 'ring-1 ring-blue-400 sm:ring-2' : '' "
+                  class="w-4 h-4 sm:w-6 sm:h-6 flex items-center justify-center rounded-full cursor-pointer bg-blue-400 -mr-1.5 border border-white sm:border-2"
+                >
+                  <svg
+                    x-show="color === 'blue' "
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-2 sm:size-3 stroke-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="m4.5 12.75 6 6 9-13.5"
+                    />
+                  </svg>
+                </div>
+                <div
+                  @click="color = 'green' "
+                  :class="color=== 'green' ? 'ring-1 ring-green-400 sm:ring-2' : '' "
+                  class="w-4 h-4 sm:w-6 sm:h-6 flex items-center justify-center rounded-full cursor-pointer bg-green-400 -mr-1.5 border border-white sm:border-2"
+                >
+                  <svg
+                    x-show="color === 'green' "
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-2 sm:size-3 stroke-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="m4.5 12.75 6 6 9-13.5"
+                    />
+                  </svg>
+                </div>
+                <div
+                  @click="color = 'pink' "
+                  :class="color=== 'pink' ? 'ring-1 ring-pink-400 sm:ring-2' : '' "
+                  class="w-4 h-4 sm:w-6 sm:h-6 flex items-center justify-center rounded-full cursor-pointer bg-pink-400 -mr-1.5 border border-white sm:border-2"
+                >
+                  <svg
+                    x-show="color === 'pink' "
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-2 sm:size-3 stroke-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="m4.5 12.75 6 6 9-13.5"
+                    />
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <!-- product title -->
+            <div
+              x-text="product.title"
+              class="text-slate-800 text-xs font-bold mb-2 md:text-base"
+            ></div>
+            <div
+              x-text="product.price"
+              class="text-orange-600 font-medium text-left text-sm mb-4 md:text-base"
+            ></div>
+            <div class="border-b border-slate-200 mb-1"></div>
+            <button
+              class="w-full font-bold text-orange-600 text-sm py-1 md:text-lg"
+            >
+              مشاهده و سفارش
+            </button>
+          </div>
+        </template>
+      </div>
+    </div>
+    <script src="//unpkg.com/alpinejs" defer></script>
   </body>
 </html>
