--- a/public/index.html
+++ b/public/index.html
@@ -82,12 +82,105 @@
           >
         </div>
       </div>
+      <!-- desktop navbar -->
+      <nav
+        class="bg-white p-4 shadow-lg sticky top-0 flex items-center justify-between z-50 mb-10"
+      >
+        <ul
+          x-data="{page:'home'}"
+          class="flex items-center gap-x-4 text-slate-800 text-lg font-normal"
+        >
+          <li>
+            <a class="block px-4 py-2" href="#">
+              <svg
+                width="99"
+                height="26"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M8.744 1.41V5.42H4.732V1.41h4.012Zm1.941 11.569c.173 0 .259.086.259.259v4.503c0 .173-.086.259-.259.259H9.65c-.276 0-.475-.009-.595-.026-.087 1.208-.337 2.235-.751 3.08-.414.863-1.078 1.657-1.993 2.381-.897.725-2.157 1.484-3.779 2.278L.746 21.727c1.208-.725 2.054-1.311 2.537-1.76.483-.449.776-.889.88-1.32.12-.431.181-1.13.181-2.096V7.49h4.762v4.918c0 .173.044.311.13.414a.56.56 0 0 0 .414.156h1.035Zm8.672-.233a5.21 5.21 0 0 1-.699 2.64A5.43 5.43 0 0 1 16.77 17.3a5.12 5.12 0 0 1-2.64.699h-3.442c-.173 0-.26-.086-.26-.259v-4.503c0-.173.087-.26.26-.26h3.39a.497.497 0 0 0 .363-.155.527.527 0 0 0 .155-.388V6.767h4.762v5.979Zm.052 7.325v4.011h-8.024v-4.011h8.024ZM26.094 18a5.119 5.119 0 0 1-2.64-.699 5.43 5.43 0 0 1-1.89-1.915 5.21 5.21 0 0 1-.698-2.64V.322h4.762v12.113c0 .173.043.31.13.414.103.087.232.13.388.13h1.578c.173 0 .26.086.26.259v4.503c0 .173-.087.259-.26.259h-1.63ZM35.798.685v4.011h-8.024V.685h8.024Zm-4.763 6.082h4.763v5.979a5.21 5.21 0 0 1-.7 2.64A5.43 5.43 0 0 1 33.21 17.3a5.119 5.119 0 0 1-2.64.699h-2.846c-.173 0-.26-.086-.26-.259v-4.503c0-.173.087-.26.26-.26h2.795a.496.496 0 0 0 .362-.155.527.527 0 0 0 .155-.388V6.767Z"
+                  fill="#222F5D"
+                />
+                <path
+                  d="M56.737 12.979c.173 0 .26.086.26.259v4.503c0 .173-.087.259-.26.259h-.724c.034.31.051.544.051.699a5.567 5.567 0 0 1-.776 2.873 5.615 5.615 0 0 1-2.096 2.07 5.614 5.614 0 0 1-2.9.777h-6.108a6.878 6.878 0 0 1-3.545-.958 7.159 7.159 0 0 1-2.589-2.588 6.878 6.878 0 0 1-.957-3.546v-6.833h4.762v6.574c0 .639.224 1.182.673 1.63.466.467 1.018.7 1.656.7h6.186c.207 0 .38-.07.518-.207a.672.672 0 0 0 .207-.492.672.672 0 0 0-.207-.492.702.702 0 0 0-.518-.207h-5.668v-5.021h12.035ZM56.74 18c-.173 0-.259-.086-.259-.259v-4.503c0-.173.086-.26.259-.26h5.798c1.173 0 2.174-.361 3.002-1.086l2.045-1.812-2.977-1.45c-.241-.103-.431-.155-.57-.155-.31 0-.62.138-.93.414l-2.693 2.977-3.313-2.899 2.718-3.313c.552-.656 1.2-1.13 1.941-1.423a5.725 5.725 0 0 1 2.226-.466c.863 0 1.682.207 2.459.62l5.539 2.59a.597.597 0 0 0 .207.05h3.339v4.66h-3.313v.724c0 .173.043.311.13.414a.56.56 0 0 0 .413.156h3.236c.172 0 .258.086.258.259v4.503c0 .173-.086.259-.258.259H72.76c-1.018 0-1.855-.242-2.51-.725-.639-.5-1.165-1.225-1.58-2.174l-.517.518a9.264 9.264 0 0 1-2.925 1.786A9.664 9.664 0 0 1 61.89 18h-5.151Zm3.21 2.07h4.011v4.012h-4.012v-4.011Zm24.72-7.324a5.21 5.21 0 0 1-.698 2.64 5.43 5.43 0 0 1-1.89 1.915 5.12 5.12 0 0 1-2.64.699H76c-.172 0-.259-.086-.259-.259v-4.503c0-.173.087-.26.26-.26h3.39a.496.496 0 0 0 .362-.155.526.526 0 0 0 .155-.388V6.767h4.763v5.979Zm.053 7.325v4.011h-8.024v-4.011h8.024Zm8.315-7.092c.449 0 .673-.181.673-.544a.418.418 0 0 0-.155-.336c-.104-.104-.346-.285-.725-.544l-5.824-4.011 2.718-3.935 6.6 4.582c.707.552 1.242 1.138 1.605 1.76.362.62.543 1.397.543 2.329 0 1.087-.267 2.07-.802 2.95a5.62 5.62 0 0 1-2.122 2.045 6.073 6.073 0 0 1-2.925.725h-6.445v-5.021h6.859Z"
+                  fill="#FF755C"
+                />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a
+              @click="page = 'home'"
+              :class="page === 'home' ? 'font-bold' : '' "
+              class="block px-4 py-2 hover:bg-gray-50 transition-all duration-500 rounded-md"
+              href="#"
+              >خانه</a
+            >
+          </li>
+          <li>
+            <a
+              @click="page = 'laptop'"
+              :class="page === 'laptop' ? 'font-bold' : '' "
+              class="block px-4 py-2 hover:bg-gray-50 transition-all duration-500 rounded-md"
+              href="#"
+              >لپتاپ</a
+            >
+          </li>
+          <li>
+            <a
+              @click="page = 'mobile'"
+              :class="page === 'mobile' ? 'font-bold' : '' "
+              class="block px-4 py-2 hover:bg-gray-50 transition-all duration-500 rounded-md"
+              href="#"
+              >تلفن همراه</a
+            >
+          </li>
+          <li>
+            <a
+              @click="page = 'watch'"
+              :class="page === 'watch' ? 'font-bold' : '' "
+              class="block px-4 py-2 hover:bg-gray-50 transition-all duration-500 rounded-md"
+              href="#"
+              >ساعت هوشمند</a
+            >
+          </li>
+        </ul>
+        <!-- search bar -->
+        <div class="flex-1 max-w-xl mr-4">
+          <div class="flex items-center relative">
+            <span class="text-slate-800 absolute right-2 cursor-pointer">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+                />
+              </svg>
+            </span>
+            <input
+              class="w-full h-11 pr-10 focus:border-orange-500 bg-stone-100 text-slate-800 placeholder:text-gray-300 placeholder:font-light form-input rounded-lg border-0"
+              type="text"
+              name="search"
+              id="search"
+              placeholder="جستجوی نام محصول، نام برند، نام مدل و..."
+            />
+          </div>
+        </div>
+      </nav>
       <!-- content -->
       <div
         class="grid grid-cols-12 md:grid-rows-[55px_minmax(500px,_1fr)] md:gap-8"
       >
         <!-- sidebar -->
-        <div class="hidden md:block col-span-3 row-span-2">
+        <div class="hidden md:block col-span-4 lg:col-span-3 row-span-2">
           <div class="bg-white p-5 rounded-xl">
             <!-- categories -->
             <div class="mb-7">
@@ -557,7 +650,7 @@
           </div>
         </div>
         <!-- sort section -->
-        <div class="hidden md:block col-span-9">
+        <div class="hidden md:block col-span-8 lg:col-span-9">
           <div
             x-data="{ sort: 1 , activeClass : 'text-slate-800 font-bold' }"
             class="bg-white px-4 flex items-center gap-x-4 text-gray-400 rounded-lg"
@@ -627,7 +720,7 @@
           </div>
         </div>
         <!-- products section -->
-        <div class="col-span-12 md:col-span-9">
+        <div class="col-span-12 md:col-span-8 lg:col-span-9">
           <div
             x-data="{ 
             products : [
@@ -643,7 +736,7 @@
               {id : 10, title : 'اپل واچ اولترا ۲' , price : '۴۱,۶۰۰,۰۰۰ تومان' , imageUrl : '../assets/images/apple-watch-ultra2.png'},
             ] 
           }"
-            class="grid gap-x-2 gap-y-6 grid-cols-2 md:grid-cols-3 lg:grid-cols-4 sm:gap-x-4 md:gap-x-6 md:gap-y-10"
+            class="grid gap-x-2 gap-y-6 grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 sm:gap-x-4 md:gap-x-6 md:gap-y-10"
           >
             <!-- single product -->
             <template x-for="product in products" :key="product.id">
