--- a/public/singleProduct.html
+++ b/public/singleProduct.html
@@ -177,7 +177,6 @@
         </div>
       </div>
     </nav>
-
     <!-- content -->
     <div
       class="px-4 lg:px-5 container mx-auto max-w-screen-2xl grid grid-cols-12 md:grid-rows-[55px_minmax(500px,_1fr)] md:gap-8"
@@ -384,13 +383,13 @@
       </div>
       <!-- product section -->
       <div class="col-span-12 md:col-span-8 lg:col-span-9 xl:col-span-10">
-        <div class="flex bg-white rounded-lg md:p-4">
+        <div class="flex flex-col lg:flex-row md:bg-white rounded-lg md:p-4">
           <!-- single product -->
           <div
-            class="px-4 flex flex-col items-center gap-y-9 md:flex-auto md:flex-row md:justify-start md:items-start"
+            class="px-4 flex flex-col items-center gap-y-9 lg:flex-auto lg:flex-row lg:justify-start lg:items-start"
           >
             <!-- iamge -->
-            <div class="w-4/5 max-w-xs">
+            <div class="w-4/5 max-w-[250px] xl:max-w-xs">
               <img
                 class="w-full h-auto"
                 src="../assets/images/iphone13/iphone-13.png"
@@ -398,29 +397,30 @@
               />
             </div>
             <!-- content -->
-            <div class="w-full md:w-auto mr-8">
+            <div class="w-full md:w-auto md:mr-8">
               <!-- title -->
               <div class="mb-8 text-center md:text-right">
                 <h1
-                  class="text-slate-800 font-bold text-lg mb-1 md:mb-2 md:text-2xl md:font-medium"
+                  class="text-slate-800 font-bold text-lg md:text-xl mb-1 md:mb-2 xl:text-2xl md:font-medium"
                 >
                   گوشی آیفون ۱۳ ۱۲۸ گیگابایت
                 </h1>
-                <h2 class="font-thin text-slate-800 md:text-lg md:font-light">
+                <h2 class="font-thin text-slate-800 lg:text-lg lg:font-light">
                   Apple Iphone 13 128 GB
                 </h2>
               </div>
-              <div
-                class="hidden border-b border-slate-200 rounded-sm w-auto md:block mb-8"
-              ></div>
+              <div class="hidden md:block mb-8 border-b border-slate-200"></div>
               <!-- color selection -->
               <div
-                class="flex items-center justify-evenly mb-5 md:justify-start"
+                class="flex items-center justify-evenly mb-6 md:justify-start"
               >
-                <span class="text-slate-800 md:text-xl">انتخاب رنگ :</span>
+                <span
+                  class="text-slate-800 sm:text-lg xl:text-xl lg:font-medium"
+                  >انتخاب رنگ :</span
+                >
                 <div
                   x-data="{color : 'red' }"
-                  class="flex items-center md:mr-4"
+                  class="flex items-center md:mr-10 lg:mr-6 xl:mr-10"
                 >
                   <div
                     @click="color = 'red' "
@@ -510,7 +510,7 @@
               </div>
               <!-- seller detail -->
               <div
-                class="text-slate-800 flex flex-wrap gap-x-2 gap-y-3 text-xs md:hidden"
+                class="text-slate-800 flex flex-wrap gap-x-2 gap-y-3 text-xs md:hidden mb-6"
               >
                 <div
                   class="flex items-center justify-center mobile-justify-start flex-auto"
@@ -635,10 +635,51 @@
                   <span class="mr-2 font-light">انبار تهران</span>
                 </div>
               </div>
+              <!-- product detail -->
+              <div
+                class="text-slate-700 font-bold bg-white p-4 rounded-lg md:bg-none md:p-0"
+              >
+                <h3 class="text-base md:text-lg lg:text-xl mb-4">
+                  ویژگی های کالا
+                </h3>
+                <ul
+                  class="text-sm md:text-base lg:text-lg flex flex-col gap-y-2"
+                >
+                  <li class="flex flex-col gap-y-1 items-start">
+                    <div class="flex items-center">
+                      <div class="rounded-full bg-orange-500 w-2 h-2"></div>
+                      <span class="font-light text-slate-600 mr-2">
+                        حافظه داخلی :
+                      </span>
+                    </div>
+                    <span class="font-semibold">128 گیگابایت</span>
+                  </li>
+                  <li class="flex flex-col gap-y-1 items-start">
+                    <div class="flex items-center">
+                      <div class="rounded-full bg-orange-500 w-2 h-2"></div>
+                      <span class="font-light text-slate-600 mr-2">
+                        بازه ی اندازه صفحه نمایش :
+                      </span>
+                    </div>
+                    <span class="font-semibold">0.6 اینچ و بزرگتر</span>
+                  </li>
+                  <li class="flex flex-col gap-y-1 items-start">
+                    <div class="flex items-center">
+                      <div class="rounded-full bg-orange-500 w-2 h-2"></div>
+                      <span class="font-light text-slate-600 mr-2">
+                        شبکه های ارتباطی :
+                      </span>
+                    </div>
+                    <span class="font-semibold"
+                      >2G &bull; 3G &bull; 4G &bull; 5G</span
+                    >
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
           <!-- seller detail -->
-          <div class="w-1/4 bg-red-100"></div>
+          <div class="w-1/4 bg-red-100 hidden md:block">Lorem, ipsum.</div>
         </div>
       </div>
     </div>
