--- a/public/singleProduct.html
+++ b/public/singleProduct.html
@@ -182,9 +182,7 @@
       class="px-4 lg:px-5 container mx-auto max-w-screen-2xl grid grid-cols-12 md:grid-rows-[55px_minmax(500px,_1fr)] md:gap-8"
     >
       <!-- sidebar -->
-      <div
-        class="hidden md:block col-span-4 lg:col-span-3 xl:col-span-2 row-span-2"
-      >
+      <div class="hidden md:block col-span-4 lg:col-span-2 row-span-2">
         <div class="sticky top-[110px]">
           <div
             class="bg-white p-5 rounded-xl max-h-[calc(100vh_-_200px)] overflow-auto mb-5"
@@ -346,7 +344,7 @@
         </div>
       </div>
       <!-- sort section -->
-      <div class="hidden md:block col-span-8 lg:col-span-9 xl:col-span-10">
+      <div class="hidden md:block col-span-8 lg:col-span-10">
         <div
           class="bg-white px-4 rounded-lg flex items-center gap-x-2 py-4 text-lg"
         >
@@ -382,40 +380,66 @@
         </div>
       </div>
       <!-- product section -->
-      <div class="col-span-12 md:col-span-8 lg:col-span-9 xl:col-span-10">
+      <div class="col-span-12 md:col-span-8 lg:col-span-10">
         <div class="flex flex-col lg:flex-row md:bg-white rounded-lg md:p-4">
           <!-- single product -->
           <div
-            class="px-4 flex flex-col items-center gap-y-9 lg:flex-auto lg:flex-row lg:justify-start lg:items-start"
+            class="px-4 md:px-0 flex flex-col items-center gap-y-9 lg:flex-auto lg:flex-row lg:justify-start"
           >
             <!-- iamge -->
-            <div class="w-4/5 max-w-[250px] xl:max-w-xs">
+            <div class="w-4/5 max-w-xs">
               <img
                 class="w-full h-auto"
                 src="../assets/images/iphone13/iphone-13.png"
                 alt="iphone-13"
               />
+              <div
+                class="hidden md:flex items-center justify-between gap-x-4 px-2 mt-4"
+              >
+                <div class="border rounded-lg p-2 border-gray-300">
+                  <img
+                    class="w-20 h-auto"
+                    src="../assets/images/iphone13/mockup-iphone-13-1.png"
+                    alt="mockup"
+                  />
+                </div>
+                <div class="border rounded-lg p-2 border-gray-300">
+                  <img
+                    class="w-20 h-auto"
+                    src="../assets/images/iphone13/mockup-iphone-13-2.png"
+                    alt="mockup"
+                  />
+                </div>
+                <div class="border rounded-lg p-2 border-gray-300">
+                  <img
+                    class="w-20 h-auto"
+                    src="../assets/images/iphone13/mockup-iphone-13-3.png"
+                    alt="mockup"
+                  />
+                </div>
+              </div>
             </div>
             <!-- content -->
-            <div class="w-full md:w-auto md:mr-8">
+            <div class="w-full md:w-auto md:mr-8 lg:w-full">
               <!-- title -->
-              <div class="mb-8 text-center md:text-right">
+              <div class="mb-8 text-center lg:text-right">
                 <h1
-                  class="text-slate-800 font-bold text-lg md:text-xl mb-1 md:mb-2 xl:text-2xl md:font-medium"
+                  class="text-slate-800 font-bold text-lg md:text-xl mb-1 md:mb-2 lg:text-2xl md:font-medium"
                 >
                   گوشی آیفون ۱۳ ۱۲۸ گیگابایت
                 </h1>
-                <h2 class="font-thin text-slate-800 lg:text-lg lg:font-light">
+                <h2 class="font-thin text-slate-800 md:text-lg md:font-light">
                   Apple Iphone 13 128 GB
                 </h2>
               </div>
-              <div class="hidden md:block mb-8 border-b border-slate-200"></div>
+              <div
+                class="hidden lg:block mb-8 border-b border-slate-200 ml-10"
+              ></div>
               <!-- color selection -->
               <div
                 class="flex items-center justify-evenly mb-6 md:justify-start"
               >
-                <span
-                  class="text-slate-800 sm:text-lg xl:text-xl lg:font-medium"
+                <span class="text-slate-800 md:text-xl md:font-medium"
                   >انتخاب رنگ :</span
                 >
                 <div
@@ -637,13 +661,13 @@
               </div>
               <!-- product detail -->
               <div
-                class="text-slate-700 font-bold bg-white p-4 rounded-lg md:bg-none md:p-0"
+                class="text-slate-700 font-bold bg-white p-4 rounded-lg md:bg-transparent md:p-0 md:mb-4 lg:mb-0"
               >
-                <h3 class="text-base md:text-lg lg:text-xl mb-4">
+                <h3 class="text-base md:text-xl lg:text-2xl mb-4">
                   ویژگی های کالا
                 </h3>
                 <ul
-                  class="text-sm md:text-base lg:text-lg flex flex-col gap-y-2"
+                  class="text-base md:text-lg lg:text-xl flex flex-col gap-y-2"
                 >
                   <li class="flex flex-col gap-y-1 items-start">
                     <div class="flex items-center">
@@ -679,8 +703,145 @@
             </div>
           </div>
           <!-- seller detail -->
-          <div class="w-1/4 bg-red-100 hidden md:block">Lorem, ipsum.</div>
+          <div class="lg:w-1/3 xl:w-1/4 hidden md:block">
+            <div
+              class="bg-gray-100 text-slate-800 flex flex-col gap-y-3 p-4 rounded-md"
+            >
+              <div class="flex items-center">
+                <span>
+                  <svg
+                    width="20"
+                    height="19"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M20 8A8 8 0 1 1 4 8a8 8 0 0 1 16 0Z"
+                      fill="#E2E2E2"
+                    />
+                    <path
+                      d="M1.756 11.545v2.62c0 2.618 1.05 3.668 3.669 3.668h3.144c2.62 0 3.67-1.05 3.67-3.669v-2.62"
+                      stroke="#222F5D"
+                      stroke-width=".875"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M7 12c1.068 0 1.855-.87 1.75-1.937l-.385-3.897H5.641l-.39 3.897c-.106 1.067.682 1.936 1.75 1.936Z"
+                      stroke="#222F5D"
+                      stroke-width=".875"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M10.681 12c1.178 0 2.042-.957 1.925-2.13l-.163-1.604c-.21-1.517-.794-2.1-2.322-2.1h-1.78l.41 4.09c.098.962.967 1.743 1.93 1.743ZM3.29 12c.963 0 1.832-.782 1.925-1.745l.128-1.289.28-2.8H3.844c-1.528 0-2.111.583-2.321 2.1L1.365 9.87C1.248 11.043 2.112 12 3.29 12ZM7 14.916c-.974 0-1.458.484-1.458 1.458v1.459h2.917v-1.459c0-.974-.485-1.458-1.459-1.458Z"
+                      stroke="#222F5D"
+                      stroke-width=".875"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </span>
+                <span class="font-medium mr-1">فروشنده :</span>
+                <span class="mr-2 font-light">دیجی تایز</span>
+              </div>
+              <div class="flex items-center">
+                <span>
+                  <svg
+                    width="21"
+                    height="19"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <circle cx="13" cy="8" r="8" fill="#E2E2E2" />
+                    <path
+                      d="M7.43 3.58 3.897 4.91c-.815.305-1.48 1.268-1.48 2.132v5.263c0 .836.552 1.934 1.225 2.437l3.046 2.274c.999.75 2.642.75 3.64 0l3.046-2.274c.673-.503 1.226-1.6 1.226-2.437V7.043c0-.87-.666-1.834-1.48-2.139L9.583 3.58c-.602-.22-1.566-.22-2.153 0Z"
+                      stroke="#222F5D"
+                      stroke-width="1.063"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </span>
+                <span class="font-medium mr-1">گارانتی :</span>
+                <span class="mr-2 font-light">18 ماه زرین خدمت</span>
+              </div>
+              <div class="flex items-center">
+                <span>
+                  <svg
+                    width="20"
+                    height="21"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <circle cx="12" cy="8" r="8" fill="#E2E2E2" />
+                    <path
+                      d="M10 6.333V13c0 .733-.6 1.333-1.333 1.333H1.334V10.08a2.6 2.6 0 0 0 2.06.92 2.563 2.563 0 0 0 1.733-.707c.207-.173.38-.393.513-.633.24-.407.373-.887.36-1.387a2.655 2.655 0 0 0-.906-1.94H10Z"
+                      stroke="#222F5D"
+                      stroke-width="1.125"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M14.667 14.333v2c0 1.107-.893 2-2 2H12C12 17.6 11.4 17 10.667 17s-1.333.6-1.333 1.333H6.667c0-.733-.6-1.333-1.333-1.333C4.6 17 4 17.6 4 18.333h-.667c-1.106 0-2-.893-2-2v-2h7.334C9.4 14.333 10 13.733 10 13V8.333h1.227c.48 0 .92.26 1.16.673L13.527 11h-.86c-.367 0-.667.3-.667.666v2c0 .367.3.667.667.667h2Z"
+                      stroke="#222F5D"
+                      stroke-width="1.125"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M5.333 19.667a1.333 1.333 0 1 0 0-2.667 1.333 1.333 0 0 0 0 2.667ZM10.667 19.667a1.333 1.333 0 1 0 0-2.667 1.333 1.333 0 0 0 0 2.667ZM14.667 13v1.333h-2a.669.669 0 0 1-.667-.666v-2c0-.367.3-.667.667-.667h.86l1.14 2Z"
+                      stroke="#222F5D"
+                      stroke-width="1.125"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M6 8.333c0 .8-.353 1.513-.906 2a2.666 2.666 0 1 1-1.76-4.667A2.666 2.666 0 0 1 6 8.333Z"
+                      stroke="#222F5D"
+                      stroke-width="1.125"
+                      stroke-miterlimit="10"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M3.5 7.499v1l-.833.5"
+                      stroke="#222F5D"
+                      stroke-width="1.125"
+                      stroke-miterlimit="10"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </span>
+                <span class="font-medium mr-1">ارسال توسط :</span>
+                <span class="mr-2 font-light">انبار تهران</span>
+              </div>
+              <div class="mt-10">
+                <div
+                  class="mb-4 w-full text-orange-500 font-bold text-xl text-left"
+                >
+                  ۲۸,۲۵۰,۰۰۰ تومان
+                </div>
+                <button class="w-full bg-orange-500 py-3 rounded-md text-white">
+                  اضافه به سبد خرید
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
+    <!-- fixed add to cart button -->
+    <div
+      class="md:hidden fixed flex items-center justify-between bottom-0 left-0 right-0 w-full bg-white shadow-[0_-4px_8px_0_rgba(0,0,0,0.1)] px-4 py-2 gap-x-8"
+    >
+      <button class="w-full py-3 text-white bg-orange-500 rounded-md">
+        اضافه به سبد خرید
+      </button>
+      <div class="text-slate-800 flex flex-col items-start">
+        <span class="font-bold text-base sm:text-lg"> ۲۸,۲۵۰,۰۰۰ </span>
+        <span class="text-slate-400 text-sm sm:text-base">تومان</span>
       </div>
     </div>
   </body>
