--- a/public/singleProduct.html
+++ b/public/singleProduct.html
@@ -384,7 +384,7 @@
         <div class="flex flex-col lg:flex-row md:bg-white rounded-lg md:p-4">
           <!-- single product -->
           <div
-            class="px-4 md:px-0 flex flex-col items-center gap-y-9 lg:flex-auto lg:flex-row lg:justify-start"
+            class="px-4 md:px-0 flex flex-col items-center gap-y-9 md:flex-auto lg:flex-row md:justify-start md:items-start"
           >
             <!-- iamge -->
             <div class="w-4/5 max-w-xs">
